# MeHRa

./: .env.example  .gitignore  MEMORY_INTEGRATION.md  README.md  __init__.py  mehra.py  output.srt  pyproject.toml  requirements.txt  run.py
STT/: stt_interface.py
TTS/: __init__.py  pyttsx3_engine.py  tts_interface.py
TTS/kokoro/: audio_generator.py  audio_player.py  config.py  engine.py  text_processor.py
core/: conversation.py
discord_bot/: discord_bot.py
providers/: model_provider.py  ollama_provider.py
src/mehra/: mehra.py  run.py
src/mehra/core/: conversation.py  memory.py  memory_backends.py  message.py  test_memory.py
src/mehra/integrations/discord/: main.py
src/mehra/io/stt/: __init__.py  whisper_engine.py
src/mehra/io/tts/: kokoro_engine.py
src/mehra/io/tts/kokoro/: interface.py
src/mehra/models/providers/: llamacpp_provider.py
src/mehra/tools/: rag_tool.py
src_cpp/: CMakeLists.txt
src_cpp/example/: main.cpp
src_cpp/include/mehra/models/providers/: llamacpp_provider.hpp  model_provider.hpp
src_cpp/src/: model_provider.cpp
src_cpp/src/providers/: llamacpp_provider.cpp
src_cs/MeHRa.Models/: LlamaCppExample.cs  MeHRa.Models.csproj
src_cs/MeHRa.Models/Providers/: LlamaCppProvider.cs  ModelProvider.cs
tools/: rag_tool.py  tool.py
workshop/: finetune_kokoro.py  memory_demo.py
